--- a/ServerProject/appsettings.json
+++ b/ServerProject/appsettings.json
@@ -5,10 +5,10 @@
         "Url": "http://0.0.0.0:7000",
         "Protocols": "Http2"
       },
-      "Https": {
+      /*"Https": {
         "Url": "https://0.0.0.0:7001",
         "Protocols": "Http1AndHttp2"
-      },
+      },*/
       "Http": {
         "Url": "http://0.0.0.0:7002",
         "Protocols": "Http1"
