--- a/Shared/Shared.csproj
+++ b/Shared/Shared.csproj
@@ -10,6 +10,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <Compile Remove="Model\Entity\HitData - コピー.cs" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <PackageReference Include="MagicOnion.Abstractions" Version="6.1.5" />
 	  <PackageReference Include="MessagePack.Annotations" Version="2.5.187" />
 	  <PackageReference Include="MessagePack.UnityShims" Version="2.5.187" />
